# image-segmentation-unet

./: .gitignore  README.md  loss_results.txt  pyproject.toml
Metrics/: attunet_bce_adamw.txt  attunet_bce_sgd.txt  attunet_dice_adamw.txt  attunet_dice_sgd.txt  attunet_tversky_adamw.txt  attunet_tversky_sgd.txt  unet_bce_adamw.txt  unet_bce_sgd.txt  unet_dice_adamw.txt  unet_dice_sgd.txt  unet_tversky_adamw.txt  unetpp_bce_adamw.txt  unetpp_bce_sgd.txt  unetpp_dice_sgd.txt  unetpp_tversky_adamw.txt  unetpp_tversky_sgd.txt
code/: evaluation.py  models.py  preprocessing.py  training.py  utils.py
