[tool.poetry]
name = "image-segmentation-unet"
version = "1.0.0"
description = "Deep learning project on the segmentation of biomedical ultrasound images with a U-Net convolutinoal neurla network, using PyTorch."
authors = ["lucasangio01 <luca.sangiovanni.2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
torch = "^2.5.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
